[package]
name = "blockchain-core-jsonrpc"
version = "0.1.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.117",  features=["derive"] }
serde_json = "1.0.59"
serde_derive = "1.0.117"
structopt = { version = "0.3.2", default-features = false }
reqwest = {version = "0.11", features=["json"]}
rand = "0.7"
