[package]
name = "report"
version = "0.1.0"
authors = ["Louis Thiery <thiery.louis@gmail.com>"]
edition = "2018"

[[bin]]
name = "report"
path = "app/main.rs"
doc = false

[lib]
name = "helium_report"
path = "lib/lib.rs"
doc = false

[dependencies]
helium-api = { git = "https://github.com/helium/helium-api-rs.git", branch = "lthiery/dev", features = ["transactions"]}
tokio = {version = "1", features = ["full"] }
structopt = "0.3"
prettytable-rs = "0.8"
chrono = "0.4"
bs58 = "0.4"
async-trait = "*"
toml = "0"